// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrackMeta > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>queue-track-0-name</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <li><span class="visuallyHidden">Track artists</span>
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </li>
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when the track prop does not have a author key > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when the track prop does not have a formattedPosition key > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast author</span><span>author</span></li>
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when the track prop does not have a podcastName key > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast author</span><span>author</span></li>
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when the track prop does not have an album key > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>queue-track-0-name</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Track artists</span>
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </li>
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when the track prop does not have an artists key > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>queue-track-0-name</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.album is undefined > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>queue-track-0-name</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Track artists</span>
            <ul class="commaList">
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link" draggable="false">name</a></li>
              <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link" draggable="false">name1</a></li>
            </ul>
          </li>
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.artists is an empty array > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>queue-track-0-name</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <li><span class="visuallyHidden">Track album</span><a class="link" data-test-id="link">album</a></li>
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>02:00</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.author is defined > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast author</span><span>author</span></li>
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.author is undefined > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.formattedPosition is defined > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast author</span><span>author</span></li>
          <li><span class="visuallyHidden">Duration</span><span><time>1</time><span>/</span><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.formattedPosition is undefined > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast name</span><a class="link" data-test-id="link">podcastName</a></li>
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast author</span><span>author</span></li>
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`TrackMeta > when track.podcastName is undefined > matches the snapshot 1`] = `
"<div class="noTouchEvents">
  <div class="marqueeScroll mBXS" inert="">
    <div class="bulletList inner">
      <div class="content">
        <h4>title</h4>
      </div>
    </div>
  </div>
  <div class="marqueeScroll smallFont mobileOnly mBXS">
    <div class="bulletList inner">
      <div class="content">
        <ul class="bulletList">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
          <li><span class="visuallyHidden">Podcast author</span><span>author</span></li>
          <li><span class="visuallyHidden">Duration</span><span><!--v-if--><time>00:19</time></span></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;
